tests/baselines/reference/parsingClassRecoversWhenHittingUnexpectedSemicolon.errors.txt
==== tests/cases/compiler/parsingClassRecoversWhenHittingUnexpectedSemicolon.ts (1 errors) ====
    class C {
        public f() { };
                      ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
        private m;
    }
    